logs_validate/seidel-2d.log
============================================================
COMET: seidel-2d  rounds=5
============================================================
Collecting vectorization remarks for source rounds...
  12 remarks collected

[Param round]
  Kernel 'kernel_seidel_2d': lines 61–76
  Collecting optimization remarks (filtered to kernel lines)...
  Extracting O3 passes via -debug-pass-manager...
  41 unique passes ran on kernel_seidel_2d
  Discovering tunable options from opt --help-hidden...
  Measuring IR stats before/after probe values...
  Querying LLM for flag selection...
  Analysis: Key bottlenecks: SLP vectorization not applied because the cost threshold is zero (break-even), preventing beneficial vectorization; GVN fails to eliminate redundant loads, increasing memory traffic; the inner loop is not vectorized, likely due to cost model. These flags aim to lower the SLP threshold to allow vectorization when beneficial, increase GVN's load PRE scope to eliminate more loads, and reduce the minimum trip count to enable loop vectorization.
    -slp-threshold: [-4, -2, -1, 0]
    -gvn-max-num-deps: [100, 200, 500, 1000]
    -vectorizer-min-trip-count: [2, 4, 8, 16]
    [auto] -slp-look-ahead-users-budget: [4, 8, 16]
    [auto] -gvn-hoist-max-bbs: [5, 10, 20]
    [auto] -pragma-vectorize-scev-check-threshold: [32, 64, 128]
    [auto] -amdgpu-unroll-threshold-if: [150, 300, 600]
    [auto] -loop-load-elimination-scev-check-threshold: [1, 2, 4]
    [auto] -loop-distribute-scev-check-threshold: [16, 32, 64]
    [auto] -licm-max-num-uses-traversed: [16, 32, 64]
    [auto] -instcombine-max-iterations: [1, 3, 6]
  Total flags to search: 11
  Baseline -O3: 25728.89 ms
  Phase A — independent flag search:
    -slp-threshold=-4 → 27402.2 ms (0.939x)
    -slp-threshold=-2 → 26057.4 ms (0.987x)
    -slp-threshold=-1 → 25719.3 ms (1.000x) ← best
    -slp-threshold=0 → 30602.4 ms (0.841x)
    -gvn-max-num-deps=100 → 29802.0 ms (0.863x)
    -gvn-max-num-deps=200 → 26274.1 ms (0.979x)
    -gvn-max-num-deps=500 → 27696.3 ms (0.929x)
    -gvn-max-num-deps=1000 → 25716.2 ms (1.000x) ← best
    -vectorizer-min-trip-count=2 → 25826.4 ms (0.996x)
    -vectorizer-min-trip-count=4 → 25784.4 ms (0.998x)
    -vectorizer-min-trip-count=8 → 25971.6 ms (0.991x)
    -vectorizer-min-trip-count=16 → 25982.2 ms (0.990x)
    -slp-look-ahead-users-budget=4 → 25888.7 ms (0.994x)
    -slp-look-ahead-users-budget=8 → 26031.2 ms (0.988x)
    -slp-look-ahead-users-budget=16 → 25826.0 ms (0.996x)
    -gvn-hoist-max-bbs=5 → 25876.1 ms (0.994x)
    -gvn-hoist-max-bbs=10 → 25632.5 ms (1.004x) ← best
    -gvn-hoist-max-bbs=20 → 25685.0 ms (1.002x)
    -pragma-vectorize-scev-check-threshold=32 → 25665.9 ms (1.002x) ← best
    -pragma-vectorize-scev-check-threshold=64 → 25610.1 ms (1.005x) ← best
    -pragma-vectorize-scev-check-threshold=128 → 26052.6 ms (0.988x)
    -amdgpu-unroll-threshold-if=150 → 25813.4 ms (0.997x)
    -amdgpu-unroll-threshold-if=300 → 26071.1 ms (0.987x)
    -amdgpu-unroll-threshold-if=600 → 25608.2 ms (1.005x) ← best
    -loop-load-elimination-scev-check-threshold=1 → 25566.5 ms (1.006x) ← best
    -loop-load-elimination-scev-check-threshold=2 → 25797.4 ms (0.997x)
    -loop-load-elimination-scev-check-threshold=4 → 25651.7 ms (1.003x)
    -loop-distribute-scev-check-threshold=16 → 25958.0 ms (0.991x)
    -loop-distribute-scev-check-threshold=32 → 25855.4 ms (0.995x)
    -loop-distribute-scev-check-threshold=64 → 25695.9 ms (1.001x) ← best
    -licm-max-num-uses-traversed=16 → 25736.1 ms (1.000x)
    -licm-max-num-uses-traversed=32 → 25657.9 ms (1.003x) ← best
    -licm-max-num-uses-traversed=64 → 25739.9 ms (1.000x)
    -instcombine-max-iterations=1 → 25789.5 ms (0.998x)
    -instcombine-max-iterations=3 → 25883.5 ms (0.994x)
    -instcombine-max-iterations=6 → 25875.3 ms (0.994x)
  LLM refinement (Phase A → refined candidates)...
  Refined: [('-loop-load-elimination-scev-check-threshold', [1, 2])]
  Phase B — joint search (best pairs):
  Best: -mllvm -loop-load-elimination-scev-check-threshold=1  → 25566.47 ms (1.006x)
  Param flags for source rounds: -mllvm -loop-load-elimination-scev-check-threshold=1
  Analyzing kernel optimization patterns...
  Analysis preview: BOTTLENECK: Memory bandwidth bound due to low arithmetic intensity (9 loads + 1 store per element) and lack of data reuse across outer loops, compounded by loop‑carried dependencies that prevent effic...

[Source round 1/4]
  Attempt 1 failed (precision_error): PRECISION ERROR: Mismatch: 337/14400 elements differ > epsilon=0.0001. First error at index 167: ref=0.43, opt=0.42, abs
  [Retry 2/3]
  Attempt 2 failed (precision_error): PRECISION ERROR: Mismatch: 337/14400 elements differ > epsilon=0.0001. First error at index 167: ref=0.43, opt=0.42, abs
  [Retry 3/3]
  Attempt 3 failed (compile_error): COMPILE ERROR:
/home/hanning/accelerate/comet/tmp/tmpzufsg3gf/seidel-2d_opt.c:64:13: error: expected identifier or '('
 
  Round 1 failed (compile_error): COMPILE ERROR:
/home/hanning/accelerate/comet/tmp/tmpzufsg3gf/seidel-2d_opt.c:64:13: error: expected identifier or '('
  const int N = n;
            ^
/home/hanning/accelerate/comet/PolyBenchC_no_rag

[Source round 2/4]
  Attempt 1 failed (precision_error): PRECISION ERROR: Mismatch: 335/14400 elements differ > epsilon=0.0001. First error at index 167: ref=0.43, opt=0.42, abs
  [Retry 2/3]
content empty, falling back to reasoning_content on attempt 1
  Attempt 2 failed (compile_error): COMPILE ERROR:
/home/hanning/accelerate/comet/tmp/tmp38eti_ti/seidel-2d_opt.c:75:1: error: expected expression
int main(
  [Retry 3/3]
  Attempt 3 failed (precision_error): PRECISION ERROR: Mismatch: 337/14400 elements differ > epsilon=0.0001. First error at index 167: ref=0.43, opt=0.42, abs
  Round 2 failed (precision_error): PRECISION ERROR: Mismatch: 337/14400 elements differ > epsilon=0.0001. First error at index 167: ref=0.43, opt=0.42, abs=1.00e-02, rel=2.33e-02. Max abs_diff=1.00e-02 at index 5727. Max rel_diff=4.35e

[Source round 3/4]
  Attempt 1 failed (precision_error): PRECISION ERROR: Mismatch: 337/14400 elements differ > epsilon=0.0001. First error at index 167: ref=0.43, opt=0.42, abs
  [Retry 2/3]
  Attempt 2 failed (precision_error): PRECISION ERROR: Mismatch: 337/14400 elements differ > epsilon=0.0001. First error at index 167: ref=0.43, opt=0.42, abs
  [Retry 3/3]
  Speedup: 0.989x (-1.1%)  24888.33 ms
  No improvement over best (1.000x) — next round still builds on current best

[Source round 4/4]
  Attempt 1 failed (compile_error): COMPILE ERROR:
/home/hanning/accelerate/comet/tmp/tmp0pwil8uo/seidel-2d_opt.c:65:58: error: operand of type 'double' can
  [Retry 2/3]
  Attempt 2 failed (precision_error): PRECISION ERROR: Mismatch: 337/14400 elements differ > epsilon=0.0001. First error at index 167: ref=0.43, opt=0.42, abs
  [Retry 3/3]
  Attempt 3 failed (precision_error): PRECISION ERROR: Mismatch: 337/14400 elements differ > epsilon=0.0001. First error at index 167: ref=0.43, opt=0.42, abs
  Round 4 failed (precision_error): PRECISION ERROR: Mismatch: 337/14400 elements differ > epsilon=0.0001. First error at index 167: ref=0.43, opt=0.42, abs=1.00e-02, rel=2.33e-02. Max abs_diff=1.00e-02 at index 5727. Max rel_diff=4.35e

============================================================
Program:      seidel-2d
Baseline -O3: 25728.89 ms
Param flags:  -mllvm -loop-load-elimination-scev-check-threshold=1  (1.006x)
Source:       no verified improvement
============================================================
